undo somewhat fixed for p2